--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+@font-face { font-family: Fifaks 1.0 dev1; src: url('Fifaks10Dev1.ttf'); } 
+
+
 * {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   box-sizing: content-box;
 }
+
+
 
 body {
   display: flex;
